--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -43,7 +43,8 @@ body {
   margin: 0 auto;
 }
 
-.about__content-button .bounce:focus {
+.about__content-button .bounce:focus,
+.arrow-button .bounce:focus {
   animation-name: bounce-left;
   animation-duration: 1s;
   animation-timing-function: ease;
@@ -69,5 +70,6 @@ body {
     animation-timing-function: ease;
     animation-delay: 0s;
     animation-iteration-count: 1;
+    
    }
 }
