--- a/src/sass/components/_contact-section.scss
+++ b/src/sass/components/_contact-section.scss
@@ -2,7 +2,7 @@
 .contacts {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: linear-gradient(#ffffff 20%, #fff5f6 20%);
+  background-image: linear-gradient($whiteColor 20%, #fff5f6 20%);
 }
 
 .contacts-list {
@@ -11,49 +11,42 @@
   align-items: center;
   margin-bottom: 32px;
   &__item-product {
-    font-family: 'DM Sans', sans-serif;
-    color: #ffffff;
+    color: $whiteColor;
   }
   &__item-foodtruck {
     background: #c2e297;
-    border-radius: 4px;
+    border-radius: 6px;
     padding: 2px 10px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    width: 75px;
     text-align: center;
-    margin-bottom: 20px;
+     margin-bottom: 20px;
+     width: 138px;
   }
   &__item-cafe {
     background: #f0d1a5;
-    border-radius: 4px;
-    padding: 2px 10px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    border-radius: 6px;
     margin-bottom: 20px;
+    padding: 2px 10px;
+    width: 75px;
+    text-align: center;
   }
   &__item {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: #ffffff;
+    background: $whiteColor;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
     padding: 40px 32px;
   }
   &__item-text {
-    font-family: 'DM Sans', sans-serif;
     color: #907e82;
     padding-bottom: 24px;
-    border-bottom: 1px solid #e1e1e1;
+    border-bottom: 1px solid $fourthColor;
   }
   &__item-town {
-    font-family: 'DM Sans', sans-serif;
-    color: #000000;
+    color: $blackColor;
     margin-bottom: 8px;
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 186%;
@@ -61,39 +54,31 @@
   &__item-program-list {
     margin-bottom: 24px;
     padding-bottom: 24px;
-    border-bottom: 1px solid #e1e1e1;
+    border-bottom: 1px solid $fourthColor;
   }
   &__item-location {
     margin-bottom: 24px;
   }
   &__item-program-time {
-    font-family: 'DM Sans', sans-serif;
-    color: #ffa5ba;
+    color: $secondaryColor;
     margin-bottom: 8px;
   }
   &__item-program-day {
-    font-family: 'DM Sans';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 186%;
     letter-spacing: 0.04em;
-    color: #000000;
+    color: $blackColor;
   }
 }
 
-.list-style {
-  list-style: none;
-}
-
-.contact-list__item-link {
+ .contact-list__item-link {
   text-decoration: none;
-  font-family: 'DM Sans', sans-serif;
-  color: #907e82;
+   color: #907e82;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: #d41443;
+    color: $primaryColor;
   }
 }
 @media screen and (max-width: 759px) {
@@ -154,13 +139,12 @@
 .contacts-list-btn__item-locations {
   background: #d41342;
   border-radius: 22px;
-  font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   font-weight: 700;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff;
+  color: $whiteColor;
   padding-left: 17px;
   padding-right: 17px;
   width: 162px;
@@ -168,15 +152,14 @@
 }
 
 .contacts-list-btn__item-franchise {
-  background: #ffffff;
+  background: $whiteColor;
   border-radius: 22px;
-  font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   font-weight: 700;
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
-  color: #d41443;
+  color: $primaryColor;
   padding-left: 32px;
   padding-right: 32px;
   width: 161px;
