--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -1,10 +1,10 @@
 @import 'src/sass/utils/_vars.scss';
 .customer-rev {
   display: flex;
-    justify-content: center;
-    width: auto; 
-    padding-left: 20px;
-    padding-right: 20px;
+  justify-content: center;
+  width: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .customer-review {
@@ -58,7 +58,7 @@
       transition: transform 0.3s;
       &:focus {
         transform: scale(1.25);
-      } 
+      }
     }
   }
 
@@ -95,7 +95,7 @@
   flex-direction: row;
 }
 .carousel-container__item {
-display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
@@ -103,28 +103,26 @@ display: flex;
 
 .carousel-arrow {
   cursor: pointer;
-  background-color: #fff;
+  background-color: $whiteColor;
   border: none;
-   
 }
 .carousel {
-display: none;
+  display: none;
 }
 
 .carousel:nth-child(1) {
-display: flex;
+  display: flex;
 }
 
 @media screen and (min-width: 768px) {
   .customer-review__rev-container {
     width: 620px;
   }
-  
+
   .customer-reviews__line {
     width: 87%;
     height: 40%;
     left: 7%;
-   
   }
 
   .customer-review__review:before {
@@ -137,7 +135,7 @@ display: flex;
     flex-direction: row;
   }
   .carousel-container__item {
-  display: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
@@ -145,16 +143,15 @@ display: flex;
 
   .carousel-arrow {
     cursor: pointer;
-    background-color: #fff;
+    background-color: $whiteColor;
     border: none;
-     
   }
- .carousel {
-  display: none;
+  .carousel {
+    display: none;
   }
 
   .carousel:nth-child(1) {
-  display: flex;
+    display: flex;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -190,7 +187,7 @@ display: flex;
         left: 0;
         height: 40px;
         width: 54px;
-         }
+      }
     }
 
     &__photo {
@@ -209,13 +206,13 @@ display: flex;
     top: 79px;
     left: 7%;
   }
-  
+
   .carousel-wrapper {
     display: flex;
     flex-direction: row;
   }
   .carousel-container__item {
-  display: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
@@ -223,18 +220,14 @@ display: flex;
 
   .carousel-arrow {
     cursor: pointer;
-    background-color: #fff;
+    background-color: $whiteColor;
     border: none;
-     
   }
- .carousel {
-  display: none;
+  .carousel {
+    display: none;
   }
 
   .carousel:nth-child(1) {
-  display: flex;
+    display: flex;
   }
-
 }
-  
- 
