--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -1,7 +1,5 @@
 @import 'src/sass/utils/_vars.scss';
-.hidden-title {
-  visibility: hidden;
-}
+ 
 .footer {
   padding-top: 40px;
   background-color: #fff5f6;
@@ -16,10 +14,10 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $thirdColor;
-    padding-left: 16px;
+    
   }
   &__second-title {
-    font-weight: 400;
+    font-family: $secondFamily;
     font-size: 58px;
     line-height: 66px;
     letter-spacing: 0.06em;
@@ -77,8 +75,6 @@
     padding-bottom: 5px;
     padding-top: 67px;
     justify-content: center;
-    font-family: 'DM Sans';
-    font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 186%;
@@ -117,9 +113,10 @@
 
 //Desktop
 
-@media screen and (max-width: 1280px) {
-  .footer__title {
-    width: 480px;
+@media screen and (min-width: 1280px) {
+  .footer__container {
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   .footer__copyright {
