--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -1,7 +1,7 @@
 <section class="contacts">
     <div class="container">
-        <h2 class="hidden-title">Our contacts</h2>
-        <ul class="contacts-list list-style">
+        <h2 hidden >Our contacts</h2>
+        <ul class="contacts-list unstyled-list">
             <li class="contacts-list__item">
                 <p class="contacts-list__item-product contacts-list__item-cafe">CAFE</p>
                 <div class="contacts-list__item-location">
@@ -9,7 +9,7 @@
                     <p class="contacts-list__item-text">Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
                 </div>
-                <ul class="contacts-list__item-program-list list-style">
+                <ul class="contacts-list__item-program-list unstyled-list">
                     <li class="contacts-list__item-program">
                         <p class="contacts-list__item-program-day">Monday - Friday</p>
                         <p class="contacts-list__item-program-time">06:00 AM - 10:00 PM</p>
@@ -19,7 +19,7 @@
                         <p class="contacts-list__item-program-time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list__item-address-list list-style">
+                <ul class="contacts-list__item-address-list unstyled-list">
                     <li class="contacts-list__item-address">
                         <a class="contact-list__item-link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                     </li>
@@ -36,7 +36,7 @@
                     </p>
                 </div>
 
-                <ul class="contacts-list__item-program-list list-style">
+                <ul class="contacts-list__item-program-list unstyled-list">
                     <li class="contacts-list__item-program">
                         <p class="contacts-list__item-program-day">Monday - Friday</p>
                         <p class="contacts-list__item-program-time">06:00 AM - 10:00 PM</p>
@@ -46,7 +46,7 @@
                         <p class="contacts-list__item-program-time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list__item-address-list list-style">
+                <ul class="contacts-list__item-address-list unstyled-list">
                     <li class="contacts-list__item-address">
                         <a class="contact-list__item-link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                     </li>
@@ -63,7 +63,7 @@
                     <p class="contacts-list__item-text">Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
                 </div>
-                <ul class="contacts-list__item-program-list list-style">
+                <ul class="contacts-list__item-program-list unstyled-list">
                     <li class="contacts-list__item-program">
                         <p class="contacts-list__item-program-day">Monday - Friday</p>
                         <p class="contacts-list__item-program-time">06:00 AM - 10:00 PM</p>
@@ -73,7 +73,7 @@
                         <p class="contacts-list__item-program-time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list__item-address-list list-style">
+                <ul class="contacts-list__item-address-list unstyled-list">
                     <li class="contacts-list__item-address">
                         <a class="contact-list__item-link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                     </li>
@@ -85,7 +85,7 @@
         </ul>
 
     </div>
-    <ul class="contacts-list-btn list-style">
+    <ul class="contacts-list-btn unstyled-list">
         <li class="contacts-list-btn__item">
             <button class="contacts-list-btn__item-locations" type="button">Our Locations
                 <svg class="about__content-icon ">
