--- a/src/partials/footer-section.html
+++ b/src/partials/footer-section.html
@@ -2,9 +2,8 @@
     <div class="footer__container">
         <div class="footer__section">
             <div class="footer__title">
-                <p class="footer__firs-title">
-                    homemade ice cream made<br /><span class="footer__second-title">with passion</span>
-                </p>
+                <p class="footer__firs-title">homemade ice cream made</p>
+                    <p class="footer__second-title">with passion </p>
             </div>
             <div class="footer__contacts">
                 <ul class="footer__social-list list">
