--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -11,11 +11,11 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </p>
-          <span class="bounce-left"><button class="arrow-button" type="button">
-            <svg class="arrow-button__svg" width="15px" height="15px">
+          <button class="arrow-button" type="button">
+            <svg class="arrow-button__svg bounce" width="15px" height="15px">
               <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
             </svg>
-          </button></span>
+          </button>
         </div>
       </li>
       <li class="products__list-item">
@@ -27,7 +27,7 @@
             eiusmod tempor incididunt ut labore et
           </p>
           <button class="arrow-button" type="button">
-            <svg class="arrow-button__svg" width="15px" height="15px">
+            <svg class="arrow-button__svg bounce" width="15px" height="15px">
               <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
             </svg>
           </button>
@@ -42,7 +42,7 @@
             eiusmod tempor incididunt ut labore et
           </p>
           <button class="arrow-button" type="button">
-            <svg class="arrow-button__svg" width="15px" height="15px">
+            <svg class="arrow-button__svg bounce" width="15px" height="15px">
               <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
             </svg>
           </button>
