--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -8,3 +8,4 @@ $whiteColor: #FFFFFF;
 $secondFamily: 'Titan One';
 $thirdColor: #e17992;
 $main-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+$fourthColor:#e1e1e1;
