--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -1,42 +1,33 @@
 @import 'src/sass/utils/_vars.scss';
 
-.gallery__container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  height: 100%;
-}
-
 .gallery {
   background-image: linear-gradient(
     to top,
-    $whiteColor 80%,
-    $secondBackgroundColor 30%
-  );
+    $whiteColor 82%,
+    $secondBackgroundColor 25%);
   padding-bottom: 60px;
-}
 
-.gallery__grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 320px;
-}
-
-.gallery__grid picture {
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  display: block;
-  // max-width: 100%;
-  height: auto;
-  padding-right: 3px;
-  &:hover img,
-  &:focus img {
-    box-shadow: 0px 8px 30px rgba(250, 250, 250, 0.673);
-    cursor: pointer;
-    transform: scale(1.3) translateX(10px);
+  &__container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+  }
+  &__grid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 320px;
+  }
+  &__grid picture {
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    display: block;
+    // max-width: 100%;
+    height: auto;
+    padding-right: 3px;
   }
 }
 
@@ -45,27 +36,24 @@
 }
 
 .gallery__fourth-item {
-  padding-top: 60px;
+  padding-top: 45px;
 }
 
-.gallery__grid picture:hover,
-.gallery__grid picture:focus {
-  transform: scale(1.1);
-}
-
+// Tablet display
 @media screen and (min-width: 768px) {
   .gallery {
     background-image: linear-gradient(
       to top,
-      #e5e5e5 50%,
-      $secondBackgroundColor 50%
-    );
+      $whiteColor 60%,
+      $secondBackgroundColor 40%);
     padding-bottom: 60px;
+
+    &__grid picture {
+      border-radius: 20px;
+      padding: 0px 6px 6px 0px;
+    }
   }
-  .gallery__grid picture {
-    border-radius: 20px;
-    padding: 0px 6px 6px 0px;
-  }
+  
   .gallery__second-item {
     padding-top: 30px;
   }
@@ -73,19 +61,30 @@
     padding-top: 50px;
   }
 }
+
+// Desktop display
+
 @media screen and (min-width: 1280px) {
   .gallery {
     background-image: linear-gradient(
       to top,
-      #e5e5e5 70%,
-      $secondBackgroundColor 20%
-    );
+      $whiteColor 84%,
+      $secondBackgroundColor 20%);
     padding-bottom: 120px;
+
+    &__grid picture {
+      border-radius: 20px;
+      padding: 0px 8px 8px 0px;
+      &:hover img,
+      &:focus img {
+        box-shadow: 0px 8px 30px rgba(250, 250, 250, 0.673);
+        cursor: pointer;
+        transform: scale(1.25);
+        transition: transform 0.3s;
+      }
+    }
   }
-  .gallery__grid picture {
-    border-radius: 20px;
-    padding: 0px 8px 8px 0px;
-  }
+ 
   .gallery__second-item {
     padding-top: 30px;
   }
