--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -4,6 +4,7 @@
         <svg class="header__icon" width="199" height="50">
           <use href="./images/header/icons.svg#icon-logo"></use>
         </svg>
+        <nav class="no-display">
         <ul class="header__list">
           <li><a class="header__item" href="#home">Home</a></li>
           <li><a class="header__item" href="#about">About us</a></li>
@@ -11,6 +12,7 @@
           <li><a class="header__item" href="#products">Our products</a></li>
           <li><a class="header__item" href="#contact">Contact</a></li>
         </ul>
+      </nav>
         <button class="header__menu-btn" type="button">
           <svg width="20" height="12">
             <use href="./images/header/icons.svg#icon-Burger"></use>
