--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -1,37 +1,26 @@
-@media (min-width: 1200px){
-  
 .header-section {
     padding: 0 16px;
     background: #ffb8ca;
     background-repeat: no-repeat;
-
-    background-image:  url("../images/header-hero/header-icecream.png"), url("../images/header-hero/header-elipse.png");
-
     background-image:  url("../images/header/header-icecream.png"), url("../images/header/header-elipse.png");
-
-    background-position:  top 100% right 37%, top 40% right 25%;
+   background-position:  top 100% right 37%, top 40% right 25%;
   }
-  
-  @media (min-device-pixel-ratio: 2),
+   @media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .header-section {
-    
     background-position:  top 100% right 37%, top 40% right 25%;
     background-image: url("../images/header/header-icecream@2x.jpg"), url("../images/header/header-elipse@2x.png");
   }
 }
-  
   .header {
     display: flex;
     align-items: center;
     padding-top: 37px;
-  
     &__icon {
       margin: 0 auto 0 0;
     }
-  
     &__list {
       display: flex;
       flex-direction: row;
@@ -40,7 +29,6 @@
       margin: 0 auto 0 auto;
       padding: 0;
     }
-  
     &__item {
       font-family: "DM Sans";
       font-style: normal;
@@ -157,6 +145,7 @@
   .info {
     display: flex;
     flex-direction: row;
+    margin: 40px 0 0 0;
   
     &__side {
       width: 200px;
@@ -173,6 +162,7 @@
       font-size: 14px;
       line-height: 140%;
       color: #ffffff;
+      margin: 68px 0 0 0;
     }
   
     &__btn {
@@ -231,5 +221,95 @@
       margin: 0;
     }
   }
+@media (max-width: 768px) and (min-width: 320px) {
+.no-display{
+ display:none;
+  }
+  .header-section {
+    padding: 0 16px;
+    background: #ffb8ca;
+    background-repeat: no-repeat;
+    background-image:  url("../images/header/header-icecream-t.png"), url("../images/header/elipse-t.png");
+    background-position:  top 50% right 57%, top 60% right 43%;
+    padding: 0 32px;
+  }
+  
+  @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .header-section {
+    background-position:  top 50% right 57%, top 60% right 43%;
+    background-image: url("../images/header/header-icecream-t@2x.png"), url("../images/header/elipse-t@2x.png");
+  }
 }
-
+.header {
+&__menu-btn {
+  visibility: inherit;
+  margin-right: -270px;
+}
+&__btn-icon {
+  margin-left: 10px;
+  }
+  &__buy-btn {
+    padding-right: 37px;
+  }
+  }
+.hero{
+  padding: 0 0 16px 0;
+  align-items: center;
+  overflow: hidden;
+  &__title {
+  font-size: 22px;
+  line-height: 25px;
+  }
+  &__link {
+  font-size: 8px;
+  line-height: 10px;
+  }
+  &__img {
+  margin-top: 70px;
+  width: 152px;
+  width: 190px;
+  }
+}
+.info {
+  margin: 20px 0 0 0;
+  &__btn {
+  width: 18px;
+  height: 18px;
+  }
+  &__side{
+    width: 114px;
+  }
+  &__text {
+    margin-top: 61px;
+  font-size: 8px;
+  line-height: 150%;
+  }
+  &__img {
+    width: 152px;
+  }
+}
+.sell-point {
+  &__no { 
+    margin:-14px 5px 0 0;
+    font-size: 28px;
+    line-height: 32px;
+  }
+  &__type {
+    font-size: 8px;
+    line-height: 10px; 
+  }
+  &__item {
+    position: relative;
+    
+  }
+  &__icon {
+    width: 16px;
+    height: 16px;
+    top:-3px;
+    right:0;
+  }
+}
+}
