--- a/src/sass/components/_locationsModal.scss
+++ b/src/sass/components/_locationsModal.scss
@@ -11,6 +11,7 @@
   z-index: 10;
   display: flex;
   justify-content: center;
+  align-items:center;
 
   transition: opacity 250ms linear;
   &__inside {
