--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -1,32 +1,41 @@
 @import 'src/sass/utils/_vars.scss';
  
+.footer__container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.footer__title{
+ width: 238px;
+ gap: 16px;
+ display: flex;
+ flex-direction: column;
+}
+
 .footer {
   padding-top: 40px;
   background-color: #fff5f6;
   position: relative;
 
-  &__firs-title {
+  &__first-title {
     font-family: $secondFamily;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
+    font-size: 18px;
+    line-height: 21px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $thirdColor;
     
   }
-  &__second-title {
+
+    &__second-title {
     font-family: $secondFamily;
-    font-size: 58px;
-    line-height: 66px;
+    font-size: 34px;
+    line-height: 39px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #d41443;
-    gap: 16px;
-    display: flex;
-    flex-direction: column;
-  }
+     }
+
   &__social-list {
     display: flex;
     gap: 30px;
@@ -43,12 +52,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding-right: 16px;
     gap: 40px;
   }
   &__contact {
-    font-family: 'DM Sans';
-    font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 186%;
@@ -64,7 +70,7 @@
     position: absolute;
     display: block;
     left: 0;
-    bottom: 30px;
+    bottom: 76px;
     width: 100%;
     height: 1px;
     border-radius: 1px;
@@ -73,7 +79,7 @@
   &__copyright-text {
     display: flex;
     padding-bottom: 5px;
-    padding-top: 67px;
+    padding-top: 56px;
     justify-content: center;
     font-weight: 700;
     font-size: 14px;
@@ -88,11 +94,7 @@
 }
 
 //Tablet
-@media screen and (max-width: 767px) {
-  .footer:after {
-    bottom: 60px;
-  }
-}
+ 
 @media screen and (min-width: 768px) {
   .footer::after {
     bottom: 40px;
@@ -109,18 +111,55 @@
     width: 340px;
     margin-bottom: 0;
   }
+
+  .footer__first-title {
+    font-size: 26px;
+    line-height: 30px;
+    }
+
+   .footer__second-title {
+      font-size: 48px;
+      line-height: 55px;
+      letter-spacing: 0.06em;
+}
 }
 
 //Desktop
 
 @media screen and (min-width: 1280px) {
+  
+  .footer__title {
+    width: 478px;
+  }
+  .footer__first-title  {
+  font-family: $secondFamily;
+  font-size: 30px;
+  line-height: 34px;
+  letter-spacing: 0.04em;
+   }
+
+   .footer__second-title {
+    font-size: 58px;
+    line-height: 66px;
+    letter-spacing: 0.06em;}
+  
   .footer__container {
     padding-left: 16px;
     padding-right: 16px;
+    width: 1280px;
+    margin: 0 auto;
   }
 
   .footer__copyright {
     padding-top: 7px;
     width: 150px;
   }
+
+.footer__copyyright-text {
+  padding-top: 67px;
+}
+
+.footer::after {
+  bottom: 40px;
+}
 }
