--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -6,8 +6,8 @@ $font-family_2: 'DM Sans';
 $background-color_1: #fff0f5;
 
 .gallery {
-    padding-top: 60px;
-    background-image: linear-gradient(to bottom, $color_1 0%, $color_1 35%, $color_3 35%, $color_3 100%);
+    // padding-top: 60px;
+    background: linear-gradient(to bottom, $color_1 0%, $color_1 35%, $color_3 35%, $color_3 100%);
     max-width: 100%;
 }
 
