hero-header-section

--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -1,328 +1,602 @@
 @import 'src/sass/utils/_vars.scss';
 
+/*Header*/
 
+@media screen and (min-width: 1280px) {
+  .header {
+    background-color: $primaryBackgroundColor;
+  }
 
+  .container-header {
+    width: 1280px;
+    margin: auto;
+    height: 664px;
+  }
 
-
-.header {
-  background-color: $primaryBackgroundColor;
-}
-
-
-.container-header {
-  width: 1280px;
-  margin: auto;
-  height: 664px;
-
-}
-
-
-
-
-
-.header-nav {
-  display: flex;
-  margin: auto;
-  align-items: center;
-  width: 1280px;
-  padding-top: 37px;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 16px;
-  padding-right: 16px;
-}
-.nav {
-  &__list {
+  .header-nav {
     display: flex;
-    padding: 0;
-    gap: 35px;
-  }
-
-  &__list-item {
-    font-family: 'DM Sans';
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: left;
-    text-decoration: none;
-    color: $whiteColor;
-    font-size: 16px;
-    font-weight: 700;
-    z-index: 5;
-    position: relative;
-  }
-
-  &__list-item:hover {
-    color: $primaryColor;
-    transition: $main-transition-timing-function;
-  }
-}
-
-.header-logo {
-  margin-right: 128px;
-}
-
-.btn-nav {
-  height: 44px;
-  width: 159px;
-  border-radius: 22px;
-  border: 0px;
-  font-family: DM Sans;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: $primaryColor;
-  margin-left: 141px;
-
-  &:hover {
-    background-color: #ecebeb;
-    cursor: pointer;
-    transition: $main-transition-timing-function;
-  }
-
-  &__svg {
-    margin-left: 12px;
-  }
-}
-
-.hero {
-  width: 1280px;
-  margin: auto;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-right: 16px;
-  padding-left: 16px;
-}
-
-.hero-group {
-  display: flex;
-}
-
-.hero-title {
-  height: 137px;
-  width: 277px;
-  border-radius: nullpx;
-  font-family: Titan One;
-  font-weight: 400;
-  letter-spacing: 0.04em;
-  text-align: left;
-  cursor: pointer;
-  margin-top: 60px;
-
-  &__first {
-    font-size: 37px;
-    line-height: 42px;
-    color: $whiteColor;
-  }
-  &__second {
-    font-size: 38px;
-    line-height: 44px;
-    color: $whiteColor;
-  }
-
-  &__last {
-    font-size: 58px;
-    line-height: 52px;
-    color: $primaryColor;
-  }
-}
-
-.hero-btn {
-  display: flex;
-  margin-top: 24px;
-
-  &__list {
-    display: flex;
-    gap: 12px;
-    padding: 0;
-    margin: 0;
-  }
-
-  &__list-first {
-    height: 40px;
-    width: 107px;
-    border-radius: 20px;
-    border: 0;
-    color: $primaryColor;
-    font-family: DM Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: center;
-
-  }
-  &__list-first:hover {
-    background-color: $primaryColor;
-    cursor: pointer;
-    color: $whiteColor;
-    transition: $main-transition-timing-function;
-  }
-  
-  &__list-second {
-    height: 40px;
-    width: 138px;
-    border-radius: 20px;
-    border: 0;
-    color: $primaryColor;
-    font-family: DM Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: center;}
-
-  &__list-second:hover {
-    background-color: $primaryColor;
-    cursor: pointer;
-    color: $whiteColor;
-    transition: $main-transition-timing-function;
-
-  }
-
-}
-
-
-.hero-number {
-  display: flex;
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
-    margin-left: 819px;
-    margin-top: 72px;
-  }
-
-  &__list-nr {
-    font-family: Titan One;
-    font-size: 46px;
-    font-weight: 400;
-    line-height: 53px;
-    letter-spacing: 0.04em;
-    text-align: right;
-    color: $primaryColor;
-  }
-
-  &__list-text {
-    font-family: DM Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: right;
-    color: $whiteColor;
-    height: 18px;
-    width: 74px;
-    border-radius: nullpx;
-  }
-}
-
-.hero-milk {
-  display: flex;
-  flex-direction: column;
-
-  &__paragraf {
-    height: 78px;
-    width: 200px;
-    border-radius: nullpx;
-    font-family: DM Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: $whiteColor;
-    margin-top: 94px;
+    margin: auto;
+    align-items: center;
+    width: 1280px;
+    padding-top: 37px;
+    margin-top: 0;
     margin-bottom: 0;
+    padding-left: 16px;
+    padding-right: 16px;
   }
-}
+  .nav {
+    &__list {
+      display: flex;
+      padding: 0;
+      gap: 35px;
+    }
 
-.hero-btn-milk {
-  height: 26px;
-  width: 26px;
-  border-radius: 50%;
-  border: 0;
-  display: flex;
-}
+    &__list-item {
+      font-family: 'DM Sans';
+      line-height: 21px;
+      letter-spacing: 0em;
+      text-align: left;
+      text-decoration: none;
+      color: $whiteColor;
+      font-size: 16px;
+      font-weight: 700;
+      z-index: 5;
+      position: relative;
+    }
 
-.arrow-button-mod{
-  margin-left: 0;
-}
-
-.arrow-button:hover {
-  background-color: $primaryColor;
-  cursor: pointer;
-  & svg {
-    fill: $whiteColor;
-    transform: rotate(90deg);
+    &__list-item:hover {
+      color: $primaryColor;
+      transition: $main-transition-timing-function;
+    }
   }
-}
-
-.hero-btn-milk-mod {
-  padding-top: 20px;
-}
-
-.hero-milk-cont {
-  display: flex;
-  width: 413px;
-  margin: 0;
-
-  &__image-mod {
-    height: 216px;
-    width: 213px;
-    border-radius: 0px;
-    margin-top: 40px;
-  }
-}
-
-.ice-cup {
-  margin-left: 676px;
-  top: 108px;
-  position: absolute;
-  z-index: 5;
-
-  &__image {
-    height: 557px;
-    width: 236px;
-    border-radius: 0px;
-  }
-}
-
-.eat-ice {
-  position: absolute;
-  margin-left: 920px;
-  top: 423px;
-  z-index: 5;
-
-  &__image {
-    height: 241px;
-    width: 304px;
-    border-radius: 0px;
-  }
-}
-
-.hero-eclips {
-  height: 534px;
-  width: 534px;
-  margin-left: 557px;
-  top: 54px;
-  border-radius: 50%;
-  background-color: $secondaryColor;
-  position: absolute;
-}
-
-/*Tableta*/
-
-@media screen and (max-width: 768px){
 
   .header-logo {
     margin-right: 128px;
   }
-.nav{
-  visibility: hidden;;
+
+  .btn-nav {
+    height: 44px;
+    width: 159px;
+    border-radius: 22px;
+    border: 0px;
+    font-family: DM Sans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: $primaryColor;
+    margin-left: 141px;
+
+    &:hover {
+      background-color: #ecebeb;
+      cursor: pointer;
+      transition: $main-transition-timing-function;
+    }
+
+    &__svg {
+      margin-left: 12px;
+    }
+  }
+
+  .hero {
+    width: 1280px;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+
+  .hero-group {
+    display: flex;
+  }
+
+  .hero-title {
+    height: 137px;
+    width: 277px;
+    border-radius: nullpx;
+    font-family: Titan One;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    cursor: pointer;
+    margin-top: 60px;
+
+    &__first {
+      font-size: 37px;
+      line-height: 42px;
+      color: $whiteColor;
+    }
+    &__second {
+      font-size: 38px;
+      line-height: 44px;
+      color: $whiteColor;
+    }
+
+    &__last {
+      font-size: 58px;
+      line-height: 52px;
+      color: $primaryColor;
+    }
+  }
+
+  .hero-btn {
+    display: flex;
+    margin-top: 24px;
+
+    &__list {
+      display: flex;
+      gap: 12px;
+      padding: 0;
+      margin: 0;
+    }
+
+    &__list-first {
+      height: 40px;
+      width: 107px;
+      border-radius: 20px;
+      border: 0;
+      color: $primaryColor;
+      font-family: DM Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+    &__list-first:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+      transition: $main-transition-timing-function;
+    }
+
+    &__list-second {
+      height: 40px;
+      width: 138px;
+      border-radius: 20px;
+      border: 0;
+      color: $primaryColor;
+      font-family: DM Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+
+    &__list-second:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+      transition: $main-transition-timing-function;
+    }
+  }
+
+  .hero-number {
+    display: flex;
+
+    &__list {
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      margin: 0;
+      margin-left: 819px;
+      margin-top: 72px;
+    }
+
+    &__list-nr {
+      font-family: Titan One;
+      font-size: 46px;
+      font-weight: 400;
+      line-height: 53px;
+      letter-spacing: 0.04em;
+      text-align: right;
+      color: $primaryColor;
+    }
+
+    &__list-text {
+      font-family: DM Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18px;
+      letter-spacing: 0em;
+      text-align: right;
+      color: $whiteColor;
+      height: 18px;
+      width: 74px;
+      border-radius: nullpx;
+    }
+  }
+
+  .hero-milk {
+    display: flex;
+    flex-direction: column;
+
+    &__paragraf {
+      height: 78px;
+      width: 200px;
+      border-radius: nullpx;
+      font-family: DM Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0em;
+      text-align: left;
+      color: $whiteColor;
+      margin-top: 94px;
+      margin-bottom: 0;
+    }
+  }
+
+  .hero-btn-milk {
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    border: 0;
+    display: flex;
+  }
+
+  .arrow-button-mod {
+    margin-left: 0;
+  }
+
+  .arrow-button:hover {
+    background-color: $primaryColor;
+    cursor: pointer;
+    & svg {
+      fill: $whiteColor;
+      transform: rotate(90deg);
+    }
+  }
+
+  .hero-btn-milk-mod {
+    padding-top: 20px;
+  }
+
+  .hero-milk-cont {
+    display: flex;
+    width: 413px;
+    margin: 0;
+
+    &__image-mod {
+      height: 216px;
+      width: 213px;
+      border-radius: 0px;
+      margin-top: 40px;
+    }
+  }
+
+  .ice-cup {
+    margin-left: 676px;
+    top: 108px;
+    position: absolute;
+    z-index: 5;
+
+    &__image {
+      height: 557px;
+      width: 236px;
+      border-radius: 0px;
+    }
+  }
+
+  .eat-ice {
+    position: absolute;
+    margin-left: 920px;
+    top: 423px;
+    z-index: 5;
+
+    &__image {
+      height: 241px;
+      width: 304px;
+      border-radius: 0px;
+    }
+  }
+
+  .hero-eclips {
+    height: 534px;
+    width: 534px;
+    margin-left: 557px;
+    top: 54px;
+    border-radius: 50%;
+    background-color: $secondaryColor;
+    position: absolute;
+  }
 }
 
+/*Tableta*/
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .header {
+    background-color: $primaryBackgroundColor;
+  }
+.container-header{
+  height: 416px;
+}
+
+
+  .header-nav {
+    width: 1280px;
+    margin: 0 auto;
+    padding-top: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+  }
+
+  .header-logo {
+    margin-right: 128px;
+  }
+
+  .nav {
+    visibility: hidden;
+  }
+
+  .btn-nav {
+    height: 44px;
+    width: 159px;
+    border-radius: 22px;
+    border: 0px;
+    font-family: DM Sans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: $primaryColor;
+    margin-left: 141px;
+
+    &:hover {
+      background-color: #ecebeb;
+      cursor: pointer;
+      transition: $main-transition-timing-function;
+    }
+
+    &__svg {
+      margin-left: 12px;
+    }
+  }
+
+  .hero {
+    width: 1280px;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+
+  .hero-group {
+    display: flex;
+  }
+
+  .hero-title {
+    height: 80px;
+    width: 162px;
+    border-radius: nullpx;
+    font-family: Titan One;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    cursor: pointer;
+    margin-top: -9.7px;
+
+    &__first {
+      font-size: 20px;
+   
+      color: $whiteColor;
+    }
+    &__second {
+      font-size: 20px;
+     
+      color: $whiteColor;
+    }
+
+    &__last {
+      font-size: 28px;
+  
+      color: $primaryColor;
+    }
+  }
+
+  .hero-btn {
+    display: flex;
+    margin-top: 24px;
+
+    &__list {
+      display: flex;
+      gap: 12px;
+      padding: 0;
+      margin: 0;
+      margin-top: -3.7px;
+    }
+
+    &__list-first {
+      height: 24px;
+      width: 62.39999771118164px;
+      border-radius: 20px;
+      border: 0;
+      color: $primaryColor;
+      font-family: DM Sans;
+      font-size: 8px;
+      font-weight: 400;
+      line-height: 10px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+    &__list-first:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+      transition: $main-transition-timing-function;
+    }
+
+    &__list-second {
+      height: 24px;
+      width: 82.79999542236328px;
+      border-radius: nullpx;
+      border-radius: 20px;
+      border: 0;
+      color: $primaryColor;
+      font-family: DM Sans;
+      font-size: 8px;
+      font-weight: 400;
+      line-height: 10px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+
+    &__list-second:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+      transition: $main-transition-timing-function;
+    }
+  }
+
+  .hero-number {
+    display: flex;
+
+    &__list {
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      margin: 0;
+      margin-left: 499px;
+      margin-top: -21.5px;
+    }
+
+    &__list-nr {
+      height: 32px;
+      width: 33px;
+      left: 693px;
+      top: 94px;
+      border-radius: nullpx;
+      font-family: Titan One;
+      font-size: 28px;
+      font-weight: 400;
+      line-height: 32px;
+      letter-spacing: 0.04em;
+      text-align: right;
+            
+      color: $primaryColor;
+    }
+
+    &__list-text {
+      font-family: DM Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18px;
+      letter-spacing: 0em;
+      text-align: right;
+      color: $whiteColor;
+      height: 18px;
+      width: 74px;
+      border-radius: nullpx;
+    }
+  }
+
+  .hero-milk {
+    display: flex;
+    flex-direction: column;
+
+    &__paragraf {
+      height: 48px;
+      width: 114px;
+      border-radius: nullpx;
+      text-align: left;
+      color: $whiteColor;
+      font-family: DM Sans;
+      font-size: 8px;
+      font-weight: 400;
+      line-height: 12px;
+      letter-spacing: 0em;
+      text-align: left;
+      margin-top: 61px;
+    }
+  }
+
+  .hero-btn-milk {
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    border: 0;
+    display: flex;
+  }
+
+  .arrow-button-mod {
+    margin-left: 0;
+  }
+
+  .arrow-button:hover {
+    background-color: $primaryColor;
+    cursor: pointer;
+    & svg {
+      fill: $whiteColor;
+      transform: rotate(90deg);
+    }
+  }
+
+  .hero-btn-milk-mod {
+    padding-top: 20px;
+
+    &__svg {
+      width: 25px;
+      height: 25px;
+    }
+  }
+
+  .hero-milk-cont {
+    display: flex;
+    width: 413px;
+    margin: 0;
+
+    &__image-mod {
+      height: 154px;
+      width: 152px;
+      border-radius: 0px;
+      margin-top: 20px;
+    }
+  }
+
+  .ice-cup {
+    z-index: 5;
+    margin-left: 322px;
+    position: absolute;
+    top: 80px;
+
+    &__image {
+      height: 336px;
+      width: 143px;
+      border-radius: 0px;
+      
+    }
+  }
+
+  .eat-ice {
+    position: absolute;
+    margin-left: 546px;
+    top: 265px;
+    z-index: 5;
+
+    &__image {
+      height: 150px;
+      width: 190px;
+      left: 546px;
+      top: 265px;
+      border-radius: 0px;
+      
+    }
+  }
+
+  .hero-eclips {
+    height: 534px;
+    width: 534px;
+    margin-left: 557px;
+    top: 54px;
+    border-radius: 50%;
+    background-color: $secondaryColor;
+    position: absolute;
+  }
 }
