update contacts section

--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -1,5 +1,5 @@
 <section class="contacts">
-    <div class="container">
+    <div class="contacts-container container">
         <h2 hidden >Our contacts</h2>
         <ul class="contacts-list unstyled-list">
             <li class="contacts-list__item">
@@ -86,18 +86,19 @@
 
     </div>
     <ul class="contacts-list-btn unstyled-list">
-        <li class="contacts-list-btn__item">
-            <button class="contacts-list-btn__item-locations" type="button">Our Locations
-                <svg class="about__content-icon ">
+        <li class="contacts-list-btn__item ">
+            <span class="btn-container bounce">
+            <button class="contacts-list-btn__item-locations"  type="button"> <span class="bounce">Our Locations
+                <svg class="contacts-list-btn__locations-icon">
                     <use href="./images/sprite.svg#icon-Vector-1"></use>
-                </svg>
+                </svg></span>
             </button>
         </li>
-        <li class="contacts-list-btn__item">
-            <button class="contacts-list-btn__item-franchise" type="button">Franchise
-                <svg class="about__content-icon">
+        <li class="contacts-list-btn__item ">
+            <button class="contacts-list-btn__item-franchise" type="button"><span class="bounce">Franchise
+                <svg class="contacts-list-btn__franchise-icon">
                     <use href="./images/sprite.svg#icon-Vector-1"></use>
-                </svg>
+                </svg></span>
             </button>
         </li>
     </ul>
