--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -97,7 +97,7 @@
  
 @media screen and (min-width: 768px) {
   .footer::after {
-    bottom: 40px;
+    bottom: 60px;
   }
 
   .footer__section {
@@ -128,6 +128,9 @@
 
 @media screen and (min-width: 1280px) {
   
+ .footer {
+  padding-top: 120px;
+ }
   .footer__title {
     width: 478px;
   }
@@ -160,6 +163,6 @@
 }
 
 .footer::after {
-  bottom: 40px;
+  bottom: 60px;
 }
 }
