--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,7 +11,7 @@
     />
   </head> -->
 <div class="products-section-container">
-  <section class="products">
+  <section class="products" id="products">
     <p class="products__subtitle">100% natural</p>
     <h2 class="products__title">Products</h2>
     <ul class="products__list">
