hero-header-section

--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -311,16 +311,16 @@
   .header {
     background-color: $primaryBackgroundColor;
   }
-.container-header{
-  height: 416px;
-}
-
+  .container-header {
+    height: 416px;
+    margin: 0 auto;
+  }
 
   .header-nav {
     width: 1280px;
     margin: 0 auto;
     padding-top: 32px;
-    padding-left: 16px;
+    padding-left: 32px;
     padding-right: 16px;
     display: flex;
   }
@@ -364,7 +364,7 @@
     margin-top: 0;
     margin-bottom: 0;
     padding-right: 16px;
-    padding-left: 16px;
+    padding-left: 32px;
   }
 
   .hero-group {
@@ -384,18 +384,18 @@
 
     &__first {
       font-size: 20px;
-   
+
       color: $whiteColor;
     }
     &__second {
       font-size: 20px;
-     
+
       color: $whiteColor;
     }
 
     &__last {
       font-size: 28px;
-  
+
       color: $primaryColor;
     }
   }
@@ -479,7 +479,7 @@
       line-height: 32px;
       letter-spacing: 0.04em;
       text-align: right;
-            
+
       color: $primaryColor;
     }
 
@@ -570,7 +570,6 @@
       height: 336px;
       width: 143px;
       border-radius: 0px;
-      
     }
   }
 
@@ -586,15 +585,197 @@
       left: 546px;
       top: 265px;
       border-radius: 0px;
-      
     }
   }
 
   .hero-eclips {
-    height: 534px;
-    width: 534px;
-    margin-left: 557px;
-    top: 54px;
+    height: 333px;
+    width: 335px;
+    left: 248px;
+    top: 43px;
+    border-radius: 50%;
+    background-color: $secondaryColor;
+    position: absolute;
+  }
+}
+
+/*Mobil*/
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .header {
+    background-color: $primaryBackgroundColor;
+  }
+  .container-header {
+    height: 502px;
+  }
+
+  .header-nav {
+    width: 1280px;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    padding-top: 8px;
+  }
+
+  .header-logo {
+    margin-right: 128px;
+  }
+
+  .nav {
+    visibility: hidden;
+  }
+
+  .btn-nav {
+    visibility: hidden;
+  }
+
+  .hero {
+    width: 1280px;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .hero-group {
+    display: flex;
+  }
+
+  .hero-title {
+    height: 106px;
+    width: 218px;
+    border-radius: nullpx;
+    font-family: Titan One;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-align: left;
+    cursor: pointer;
+    margin-top: 105.5px;
+    z-index: 100;
+    position: relative;
+
+    &__first {
+      font-size: 26px;
+      line-height: 30px;
+      color: $whiteColor;
+    }
+    &__second {
+      font-size: 26px;
+      line-height: 30px;
+      color: $whiteColor;
+    }
+
+    &__last {
+      font-size: 48px;
+      line-height: 46px;
+      color: $primaryColor;
+    }
+  }
+
+  .hero-btn {
+    display: flex;
+    margin-top: 24px;
+
+    &__list {
+      display: flex;
+      gap: 12px;
+      padding: 0;
+      margin: 0;
+      margin-top: -3.7px;
+      z-index: 100;
+    }
+
+    &__list-first {
+      height: 24px;
+      width: 61.20000076293945px;
+      border-radius: nullpx;
+      border-radius: 20px;
+      border: 0;
+      color: $primaryColor;
+      font-family: DM Sans;
+      font-size: 8px;
+      font-weight: 400;
+      line-height: 10px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+    &__list-first:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+      transition: $main-transition-timing-function;
+    }
+
+    &__list-second {
+      height: 24px;
+      width: 82.79999542236328px;
+      border-radius: nullpx;
+      border-radius: 20px;
+      border: 0;
+      color: $primaryColor;
+      font-family: DM Sans;
+      font-size: 8px;
+      font-weight: 400;
+      line-height: 10px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+
+    &__list-second:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+      transition: $main-transition-timing-function;
+    }
+  }
+
+  .hero-number {
+    visibility: hidden;
+  }
+
+  .hero-milk {
+    visibility: hidden;
+  }
+
+  .hero-btn-milk {
+    visibility: hidden;
+  }
+
+  .arrow-button-mod {
+    visibility: hidden;
+  }
+
+  .hero-milk-cont {
+    visibility: hidden;
+  }
+
+  .ice-cup {
+    z-index: 5;
+    margin-left: 117px;
+    position: absolute;
+    top: 92px;
+
+    &__image {
+      height: 410px;
+      width: 171px;
+
+      border-radius: 0px;
+    }
+  }
+
+  .eat-ice {
+    visibility: hidden;
+  }
+
+  .hero-eclips {
+    height: 344px;
+    width: 346px;
+    top: 83px;
+    border-radius: 0px;
+    margin-left: 36px;
+    top: 83px;
     border-radius: 50%;
     background-color: $secondaryColor;
     position: absolute;
